syntax = "proto3";

package zitadel.session.v2alpha;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/session/v2alpha;session";

message Consumers {
    optional OIDC oidc = 1;
}

message OIDC {
    string auth_request_id = 1;
}
